include_directories(${PROJECT_SOURCE_DIR}/Engine/External/glm/glm)

include_directories(${PROJECT_SOURCE_DIR}/Engine/Modules/Asset/include)
include_directories(${PROJECT_SOURCE_DIR}/Engine/Modules/Core/include)
include_directories(${PROJECT_SOURCE_DIR}/Engine/Modules/Event/include)
include_directories(${PROJECT_SOURCE_DIR}/Engine/Modules/Game2D/include)
include_directories(${PROJECT_SOURCE_DIR}/Engine/Modules/Graphics/include)
include_directories(${PROJECT_SOURCE_DIR}/Engine/Modules/HTTP/include)
include_directories(${PROJECT_SOURCE_DIR}/Engine/Modules/IO/include)
include_directories(${PROJECT_SOURCE_DIR}/Engine/Modules/Launcher/include)
include_directories(${PROJECT_SOURCE_DIR}/Engine/Modules/LuaLauncher/include)
include_directories(${PROJECT_SOURCE_DIR}/Engine/Modules/Resource/include)
include_directories(${PROJECT_SOURCE_DIR}/Engine/Modules/Storage/include)
include_directories(${PROJECT_SOURCE_DIR}/Engine/Modules/Window/include)

sam_set_ide_group(Examples)

add_subdirectory(StorageFilesystemExample)
add_subdirectory(HTTPFilesystemExample)
add_subdirectory(WindowExample)
add_subdirectory(ClearColorExample)
add_subdirectory(TriangleExample)
add_subdirectory(AssetExample)
add_subdirectory(LuaExample)
add_subdirectory(CanvasExample)