sam_set_ide_group(Modules)

include_directories(${PROJECT_SOURCE_DIR}/Engine/External/glm/glm)

include_directories(${PROJECT_SOURCE_DIR}/Engine/External/v8pp)

include_directories(Asset/include)
include_directories(Core/include)
include_directories(Event/include)
include_directories(Graphics/include)
include_directories(HTTP/include)
include_directories(IO/include)
include_directories(Launcher/include)
include_directories(LuaLauncher/include)
include_directories(Resource/include)
include_directories(Storage/include)
include_directories(V8Launcher/include)
include_directories(Window/include)

add_subdirectory(Asset)
add_subdirectory(Core)
add_subdirectory(Event)
add_subdirectory(Graphics)
add_subdirectory(HTTP)
add_subdirectory(IO)
add_subdirectory(Launcher)
add_subdirectory(LuaLauncher)
add_subdirectory(Resource)
add_subdirectory(Storage)
add_subdirectory(V8Launcher)
add_subdirectory(Window)